fix: [CDS-48355]: Fixed TabWizard Footer and StepWizard Overlapping Issue (#12988)

--- a/src/modules/10-common/components/Wizard/Wizard.module.scss
+++ b/src/modules/10-common/components/Wizard/Wizard.module.scss
@@ -81,7 +81,7 @@
     width: 100%;
     padding: var(--spacing-medium) 0 !important;
     background-color: var(--form-bg) !important;
-    z-index: 25;
+    z-index: 20;
     align-items: center;
     p:hover {
       cursor: pointer;
