--- a/src/modules/72-triggers/components/TabWizard/TabWizardFooter/TabWizardFooter.module.scss
+++ b/src/modules/72-triggers/components/TabWizard/TabWizardFooter/TabWizardFooter.module.scss
@@ -8,5 +8,5 @@
 .footer {
   position: fixed;
   bottom: 0;
-  z-index: 25;
+  z-index: 20;
 }
